Updated Faster RubyMine (markdown)